<resources>
    <string name="app_name">Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_display_calculator_result">Calculator Result</string>
    <string name="enter_message">Enter two numbers, and choose the operation:</string>
    <string name="add_message">+</string>
    <string name="sub_message">-</string>
    <string name="mult_message">*</string>
    <string name="div_message">/</string>
    <string name="comp_result">Computation Result</string>
</resources>
