<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.keelan.calculator.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize = "32sp"
        android:text="@string/enter_message"
        android:textColor="#B8860B"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:id="@+id/first_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType= "number"
        android:layout_marginTop = "96dp"
        android:layout_marginLeft="48dp"
        android:textSize="48sp"
        android:width="72dp"/>


    <EditText
        android:id="@+id/second_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType = "number"
        android:layout_marginTop = "96dp"
        android:layout_marginLeft = "256dp"
        android:textSize="48sp"
        android:width="72dp" />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addNumbers"
        android:layout_centerVertical="true"
        android:height="24dp"
        android:width="24dp"
        android:background="#7FFFD4"
        android:text="@string/add_message"
        android:textSize="24sp"
        android:id="@+id/addButton"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addNumbers"
        android:layout_centerVertical="true"
        android:height="24dp"
        android:width="24dp"
        android:layout_toRightOf="@id/addButton"
        android:background="#7FFFD4"
        android:text="@string/sub_message"
        android:textSize="24sp"
        android:id="@+id/subButton"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addNumbers"
        android:layout_centerVertical="true"
        android:height="24dp"
        android:width="24dp"
        android:layout_toRightOf="@id/subButton"
        android:background="#7FFFD4"
        android:text="@string/mult_message"
        android:textSize="24sp"
        android:id="@+id/multButton"
        />

    <Button android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="addNumbers"
        android:layout_centerVertical="true"
        android:height="24dp"
        android:width="24dp"
        android:layout_toRightOf="@id/multButton"
        android:background="#7FFFD4"
        android:text="@string/div_message"
        android:textSize="24sp"
        android:id="@+id/divButton"
        />


    <TextView android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/displayresult"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="324dp"
        android:textSize="20sp"
        />


</RelativeLayout>
